tools/tests/ui/fail/l1007.cnf
// Test file for error code: L1007
// Expected error: Invalid Unterminated character in encoding -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-invalid".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
